# HPC

homework1/: MMult0  MMult0.cpp  hw1  hw1.cpp
homework2/: CMakeLists.txt
homework4/: jacobi_gpu.cu  production.cu  report.txt
homework5/: int_ring.cpp
homework6copy/: cached-jacobi2D-mpi.cpp  jacobi2D-mpi-new.cpp  ssort.cpp
